docs: manually refine authentication route swagger documentation
